Fixed a spacing issue and a naming scheme.

--- a/front-end/src/app/table.sass
+++ b/front-end/src/app/table.sass
@@ -21,7 +21,7 @@
     tr
       border-bottom: 1px solid lightgray
     td
-      padding: .5em
+      padding: .5em 0
 
     tr:nth-child(even)
       background-color: #f2f2f2
